plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.11'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
}

group = 'animores'
version = '1.0'

java {
	sourceCompatibility = '17'
}

test {
	jacoco {
		destinationFile = file("$buildDir/jacoco/jacoco.exec")
	}

	useJUnitPlatform()

	finalizedBy 'jacocoTestReport'
}

jacoco {
	toolVersion = '0.8.7' // Jacoco version
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

test {
	useJUnitPlatform()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.amazonaws.serverless:aws-serverless-java-container-springboot3:2.0.0-M2'
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
  
	// validation
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

	// security + jwt
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// JJWT (JSON Web Token)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.1'
	implementation 'org.springframework.data:spring-data-redis:3.2.3'
	// h2, mysql
	implementation 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	// AWS
	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-messaging', version: '2.2.3.RELEASE'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-autoconfigure', version: '2.2.3.RELEASE'


	// Aspectj
	implementation 'org.aspectj:aspectjweaver:1.9.7'
	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.5'

	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
}

jacocoTestReport {
	dependsOn(test) // Ensure tests are run before generating report
	reports {
		xml.required = false
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
	// Define coverage thresholds
	afterEvaluate {
		classDirectories = fileTree(dir: 'build/classes/java/test')
	}
	executionData = files('build/jacoco/test.exec')
}

jacocoTestCoverageVerification {
	// Configure coverage thresholds
	violationRules {
		rule {
			limit {
				minimum = 0.70
				counter = 'INSTRUCTION'
			}
			limit {
				minimum = 0.68
				counter = 'BRANCH'
			}
			enabled = true
		}
	}
}